@@ -22,6 +22,8 @@ changes in sbcl-1.0.5 relative to sbcl-1.0.4:
     to global variables using SYMBOL-VALUE and a constant argument.
   * enhancement: SIGINT now causes a specific condition
     SB-SYS:INTERACTIVE-INTERRUPT to be signalled.
+  * bug fix: inlined calls to C now ensure 16byte stack alignment on
+    x86/Darwin.
   * bug fix: bad type declaration in the CLOS implementation has
     been fixed. (reported by James Anderson)
   * bug fix: incorrect ROOM reporting on x86-64 has been fixed.
